--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
     />
+    <!-- AOS -->
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
     <title>Elina Services</title>
   </head>
   <body>
@@ -37,5 +39,6 @@
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <!--Date Picker-->
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="bower_components/aos/dist/aos.js"></script>
   </body>
 </html>
