--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,7 @@
     <!--Date Picker-->
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script src="bower_components/aos/dist/aos.js"></script>
+    <!-- Uncomment only while going live  -->
+    <!-- <script src="https://cdn-in.pagesense.io/js/portal6858/b31d46ded7d841d2bd9a0c3ea077d808.js"></script> -->
   </body>
 </html>
